--- a/GameConfig.toml
+++ b/GameConfig.toml
@@ -126,9 +126,16 @@ end
 '''
 
 filter_text = '''
-function(text, user_id_num, user_code)
-    return text:gsub('oo','òó'):gsub('OO','ÒÓ'):gsub('ee','èé'):gsub('EE','ÈÉ'):gsub('Roblox','Rōblox'):gsub('ROBLOX','RŌBLOX')
-end
+def f(text, user_id_num, user_code):
+    return (
+        text
+        .replace('oo','òó')
+        .replace('OO','ÒÓ')
+        .replace('ee','èé')
+        .replace('EE','ÈÉ')
+        .replace('Roblox','Rōblox')
+        .replace('ROBLOX','RŌBLOX')
+    )
 '''
 
 retrieve_groups = '''
