--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,15 @@
 GameConfig.toml
 Source/ssl/?*.*
 
-
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+*.pyc
+*.pyo
+*.pyd
 *$py.class
 
 # C extensions
