--- a/Examples/Crossroads 2007/GameConfig.toml
+++ b/Examples/Crossroads 2007/GameConfig.toml
@@ -33,19 +33,19 @@ end
 '''
 
 check_user_allowed = '''
-function(user,iden, user_code) -- string -> bool
+function(user_iden, user_code) -- string -> bool
     return true
 end
 '''
 
 retrieve_avatar_type = '''
-function(user,iden, user_code) -- str -> str
+function(user_iden, user_code) -- str -> str
     return 'R6'
 end
 '''
 
 retrieve_avatar_items = '''
-function(user,iden, user_code) -- str -> [str]
+function(user_iden, user_code) -- str -> [str]
     if user_code == 'VisualPlugin' then
         return {
             10726856854,
@@ -73,7 +73,7 @@ end
 '''
 
 retrieve_avatar_colors = '''
-function(user,iden, user_code) -- str -> {[str]: number}
+function(user_iden, user_code) -- str -> {[str]: number}
     if user_code == 'VisualPlugin' then
         return {
             head = 315,
@@ -126,7 +126,7 @@ def f(text, user_id_num, user_code):
 '''
 
 retrieve_groups = '''
-function(user,iden, user_code) -- str -> str
+function(user_iden, user_code) -- str -> str
     return {
         ['1200769'] = 255;
         ['2868472'] = 255;
