--- a/Examples/F3X Server/GameConfig.toml
+++ b/Examples/F3X Server/GameConfig.toml
@@ -79,20 +79,20 @@ end
 '''
 
 check_user_allowed = '''
-function(user_code) -- string -> bool
+function(user_iden, user_code) -- string -> bool
     print(user_code, 'joined from IP address', ip_addr)
     return true
 end
 '''
 
 retrieve_avatar_type = '''
-function(user_code) -- str -> str
+function(user_iden, user_code) -- str -> str
     return 'R15'
 end
 '''
 
 retrieve_avatar_items = '''
-function(user_code) -- str -> [str]
+function(user_iden, user_code) -- str -> [str]
     if user_code:find('Mary') then
         return {
             8746101819,
@@ -137,7 +137,7 @@ end
 '''
 
 retrieve_avatar_colors = '''
-function(user_code) -- str -> {[str]: number}
+function(user_iden, user_code) -- str -> {[str]: number}
     return {
         head = 315,
         left_arm = 315,
@@ -150,7 +150,7 @@ end
 '''
 
 retrieve_avatar_scales = '''
-function(user_code) -- str -> {[str]: number}
+function(user_iden, user_code) -- str -> {[str]: number}
     if user_code:find('Mary') then
         return {
             height = 0.95,
@@ -173,19 +173,19 @@ end
 '''
 
 retrieve_username = '''
-function(user_code) -- str -> str
+function(user_iden, user_code) -- str -> str
     return user_code
 end
 '''
 
 retrieve_user_id = '''
-function(user_code) -- str -> int
+function(user_iden, user_code) -- str -> int
     return math.random(1, 16777216)
 end
 '''
 
 retrieve_account_age = '''
-function(user_code) -- str -> int
+function(user_iden, user_code) -- str -> int
     return 6969
 end
 '''
