--- a/Examples/Crossroads 2007/GameConfig.toml
+++ b/Examples/Crossroads 2007/GameConfig.toml
@@ -9,7 +9,7 @@ title = 'Crossroads'
 description = 'The classic Rōblox map.'
 creator_name = 'David Baszucki, Erik Cassel'
 
-icon_url = 'https://ia600506.us.archive.org/34/items/soundcloud-1509042007/1509042007.jpg'
+icon_uri = 'https://ia600506.us.archive.org/34/items/soundcloud-1509042007/1509042007.jpg'
 
 startup_script = 'game.workspace.FilteringEnabled = true'
 
