--- a/Examples/Roblox High/GameConfig.toml
+++ b/Examples/Roblox High/GameConfig.toml
@@ -8,7 +8,7 @@ title = 'òó'
 description = ''
 creator_name = 'ÒÓ'
 
-icon_url = 'c:\Users\USERNAME\Pictures\Byfron Icon.png'
+icon_uri = 'c:\Users\USERNAME\Pictures\Byfron Icon.png'
 
 startup_script = 'game.workspace.FilteringEnabled = true'
 
