--- a/Examples/Photo/GameConfig.toml
+++ b/Examples/Photo/GameConfig.toml
@@ -219,7 +219,7 @@ def f(id_num, user_code):
 '''
 
 retrieve_username = '''
-def f(user_code):
+def f(user_id_num, user_code):
     return user_code
 '''
 
