--- a/Examples/Roblox High/GameConfig.toml
+++ b/Examples/Roblox High/GameConfig.toml
@@ -107,7 +107,7 @@ function(user_iden, user_code)
 '''
 
 retrieve_username = '''
-def f(user_code):
+def f(user_id_num, user_code):
     return user_code
 '''
 
