--- a/Examples/Lumber Tycoon 2/GameConfig.toml
+++ b/Examples/Lumber Tycoon 2/GameConfig.toml
@@ -23,7 +23,7 @@ startup_script = 'game.workspace.FilteringEnabled = true'
 
 [game_setup.place_file]
 rbxl_uri = 'Lumber Tycoon 2.rbxl'
-# When game:SavePlace() is called, overwirtes the place at `.place_path`
+# When game:SavePlace() is called, overwrites the place at `.place_path`
 enable_saveplace = false
 
 [game_setup.database]
