--- a/Examples/F3X Server/GameConfig.toml
+++ b/Examples/F3X Server/GameConfig.toml
@@ -7,9 +7,15 @@ instances.count = 1
 # Aliases for "v348" is "2018M", "v463" is "2021E".
 roblox_version = '2021'
 
+[game_setup.database]
+path = '_.sqlite'
+clear_on_start = false
+
+[server_core.metadata]
 title = 'F3X'
 description = ''
 creator.name = 'ÒÓ'
+icon_uri = '_.png'
 
 startup_script = '''
 local ASSET_IDS = {
@@ -57,21 +63,12 @@ game:BindToClose(function()
 end)
 '''
 
-[game_setup.place_file]
+[server_core.place_file]
 rbxl_uri = '_.rbxl'
 # When game:SavePlace() is called, overwirtes the place at `.place_path`
 enable_saveplace = true
 
-[game_setup.database]
-path = '_.sqlite'
-clear_on_start = false
 
-[game_setup.icon]
-# Stretches to 16:9.
-path = '_.png'
-
-
-[server_core]
 retrieve_default_user_code = '''
 function(tick) -- float -> str
     return string.format('Tick %d', tick)
